--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
       z-index:12;
       container-type:size;
     }
-    .xml-layers .item{ position:absolute; overflow:hidden; }
+/*    .xml-layers .item{ position:absolute; overflow:hidden; } */
+    .xml-layers .item{ outline:1px dashed rgba(255,255,255,.35); }
     .xml-layers .text{
       display:flex; line-height:1; padding:0 .25rem; word-break:break-word;
     }
