--- a/index.html
+++ b/index.html
@@ -354,14 +354,21 @@ function applyScore(s){
       let msg; try{ msg=JSON.parse(evt.data); }catch{ return; }
       wsLog('←', msg);
       switch ((msg.type||'').toLowerCase()){
-        case 'state':
-          if (typeof msg.serverNowMs==='number') skewMs = Date.now()-msg.serverNowMs;
-          applyTeams(msg.teams);
-          applyScore(msg.score);
-          if (msg.clock) net = { running:!!msg.clock.running, startEpochMs:msg.clock.startEpochMs||0, carryMs:msg.clock.carryMs||0 };
-          if (msg.xml?.url) window.loadXML?.(msg.xml.url, msg.xml.scene, msg.xml.autoplay);
-          if (msg.scene) window.setXMLScene?.(msg.scene);
+        case 'state': {
+          const reapply = () => {
+            applyTeams(msg.teams);
+            applyScore(msg.score);
+            if (msg.clock) net = { running:!!msg.clock.running, startEpochMs:msg.clock.startEpochMs||0, carryMs:msg.clock.carryMs||0 };
+            if (typeof msg.serverNowMs === 'number') skewMs = Date.now() - msg.serverNowMs;
+          };
+          if (msg.xml?.url && window.loadXML) {
+            Promise.resolve(window.loadXML(msg.xml.url, msg.xml.scene, msg.xml.autoplay))
+              .then(reapply);
+          } else {
+            reapply();
+          }
           break;
+        }
         case 'teams': applyTeams(msg); break;
         case 'score': applyScore(msg); break;
         case 'clock':
