--- a/index.html
+++ b/index.html
@@ -101,8 +101,21 @@ function wsLog(dir, msg){
   function getStr(a,...k){ for (const x of k) if (a[x]!=null) return a[x]; return ''; }
   function parseColor(s){
     if (!s) return null;
-    if (s.includes(';')){ const [r,g,b,a]=s.split(';').map(n=>+n||0); return `rgba(${r},${g},${b},${(a??255)/255})`; }
-    return s;
+    s = String(s).trim();
+    // Already-valid CSS? (hex or rgba/rgb)
+    if (/^#/.test(s) || /^rgba?\(/i.test(s)) return s;
+  
+    // Accept "r;g;b;a" OR "r,g,b,a" (a is 0–255)
+    const parts = s.split(/[,;]\s*/).map(n => +n);
+    if (parts.length >= 3){
+      const [r, g, b, a = 255] = parts;
+      const rr = Math.max(0, Math.min(255, r|0));
+      const gg = Math.max(0, Math.min(255, g|0));
+      const bb = Math.max(0, Math.min(255, b|0));
+      const aa = Math.max(0, Math.min(255, a|0)) / 255;
+      return `rgba(${rr},${gg},${bb},${aa})`;
+    }
+    return null;
   }
   function parseFont(s){ if (!s) return {family:`'Droid Sans Mono', monospace`, sizePx:24};
     const [fam,sz] = s.split(';'); return {family:fam||`'Droid Sans Mono', monospace`, sizePx:+(sz||24)}; }
