--- a/index.html
+++ b/index.html
@@ -212,7 +212,29 @@ function wsLog(dir, msg){
         el.style.fontWeight = 700;
         el.classList.add(...alignClasses(align).split(' '));
         el.textContent = getStr(a,'defaulttext','text','value','content') || '';
+
+        if (prefab === 'panel'){
+        // (point 2) broader attribute lookup + (point 1) new parseColor
+        const bg = parseColor(getStr(
+          a,
+          'imagecolor','imagecolour','backgroundcolor','panelcolor','bg','color'
+        ));
+        if (bg) el.style.background = bg;
+        el.style.pointerEvents = 'none';
       
+        // ---- POINT 3: sanity log (only when ?diag=1) ----
+        if (DIAG){
+          if (!bg){
+            console.warn('[XML][panel] No color parsed for', a.name || '(unnamed)', a);
+          } else {
+            console.info(
+              '[XML][panel] color=', bg,
+              'box=', el.style.left, el.style.top, el.style.width, el.style.height
+            );
+          }
+        }
+      }
+        
         // --- responsive sizing (POINT 3) ---
         const minPx = (getNum(a,'minfontsize','minfont','minsize') || 8)  * (TARGET_H/(baseH||TARGET_H));
         const maxPx = (getNum(a,'maxfontsize','maxfont','maxsize') || 200)* (TARGET_H/(baseH||TARGET_H));
