--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   .xml-layers .item{ position:absolute; overflow:hidden; }
   .xml-layers .text{
-    display:flex; line-height:1; padding:0 .25rem; word-break:break-word;
+    display:flex; line-height:1; padding:0 .25rem; word-break:break-word;box-sizing: border-box;
   }
   .align-left{justify-content:flex-start;text-align:left}
   .align-center{justify-content:center;text-align:center}
